tests/error/misc_errors/pattern_no_args1.err
Error: Not enough arguments (at $FILE:13:13)
   | 
11 | def main(p: Point, x: int) -> None:
12 |     match p:
13 |         case Point():
   |              ^^^^^^^ Expected 2, got 0

Guppy compilation failed due to 1 previous error
